@@ -1,14 +1,16 @@
 /*******************************************************************************
  * Copyright (c) 2015 Eclipse RDF4J contributors, Aduna, and others.
+ *
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Distribution License v1.0
  * which accompanies this distribution, and is available at
  * http://www.eclipse.org/org/documents/edl-v10.php.
+ *
+ * SPDX-License-Identifier: BSD-3-Clause
  *******************************************************************************/
 package org.eclipse.rdf4j.sail.elasticsearch;
 
 import java.io.IOException;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.HashSet;
 import java.util.Iterator;
@@ -115,12 +117,12 @@ public class ElasticsearchIndexTest extends ESIntegTestCase {
 
 	@Override
 	protected Collection<Class<? extends Plugin>> transportClientPlugins() {
-		return Arrays.asList(ReindexPlugin.class);
+		return List.of(ReindexPlugin.class);
 	}
 
 	@Override
 	protected Collection<Class<? extends Plugin>> nodePlugins() {
-		return Arrays.asList(ReindexPlugin.class);
+		return List.of(ReindexPlugin.class);
 	}
 
 	@After
@@ -131,6 +133,9 @@ public class ElasticsearchIndexTest extends ESIntegTestCase {
 		} finally {
 			super.tearDown();
 		}
+
+		org.eclipse.rdf4j.common.concurrent.locks.Properties.setLockTrackingEnabled(false);
+
 	}
 
 	@Test
@@ -148,7 +153,7 @@ public class ElasticsearchIndexTest extends ESIntegTestCase {
 				.setTypes(index.getTypes())
 				.get()
 				.getHits()
-				.getTotalHits();
+				.getTotalHits().value;
 		assertEquals(1, count);
 
 		SearchHits hits = client.prepareSearch(index.getIndexName())
@@ -178,7 +183,11 @@ public class ElasticsearchIndexTest extends ESIntegTestCase {
 		// See if everything remains consistent. We must create a new
 		// IndexReader
 		// in order to be able to see the updates
-		count = client.prepareSearch(index.getIndexName()).setTypes(index.getTypes()).get().getHits().getTotalHits();
+		count = client.prepareSearch(index.getIndexName())
+				.setTypes(index.getTypes())
+				.get()
+				.getHits()
+				.getTotalHits().value;
 		assertEquals(1, count); // #docs should *not* have increased
 
 		hits = client.prepareSearch(index.getIndexName())
@@ -204,7 +213,7 @@ public class ElasticsearchIndexTest extends ESIntegTestCase {
 				.setSource(new SearchSourceBuilder().size(0).query(QueryBuilders.queryStringQuery(object1.getLabel())))
 				.get()
 				.getHits()
-				.getTotalHits();
+				.getTotalHits().value;
 		assertEquals(1, count);
 
 		count = client.prepareSearch(index.getIndexName())
@@ -212,7 +221,7 @@ public class ElasticsearchIndexTest extends ESIntegTestCase {
 				.setSource(new SearchSourceBuilder().size(0).query(QueryBuilders.queryStringQuery(object2.getLabel())))
 				.get()
 				.getHits()
-				.getTotalHits();
+				.getTotalHits().value;
 		assertEquals(1, count);
 
 		// remove the first statement
@@ -224,7 +233,11 @@ public class ElasticsearchIndexTest extends ESIntegTestCase {
 		// still
 		// exists
 
-		count = client.prepareSearch(index.getIndexName()).setTypes(index.getTypes()).get().getHits().getTotalHits();
+		count = client.prepareSearch(index.getIndexName())
+				.setTypes(index.getTypes())
+				.get()
+				.getHits()
+				.getTotalHits().value;
 		assertEquals(1, count);
 
 		hits = client.prepareSearch(index.getIndexName())
@@ -252,7 +265,11 @@ public class ElasticsearchIndexTest extends ESIntegTestCase {
 		// check that there are no documents left (i.e. the last Document was
 		// removed completely, rather than its remaining triple removed)
 
-		count = client.prepareSearch(index.getIndexName()).setTypes(index.getTypes()).get().getHits().getTotalHits();
+		count = client.prepareSearch(index.getIndexName())
+				.setTypes(index.getTypes())
+				.get()
+				.getHits()
+				.getTotalHits().value;
 		assertEquals(0, count);
 	}
 
@@ -275,7 +292,7 @@ public class ElasticsearchIndexTest extends ESIntegTestCase {
 				.setTypes(index.getTypes())
 				.get()
 				.getHits()
-				.getTotalHits();
+				.getTotalHits().value;
 		assertEquals(2, count);
 
 		// check the documents
@@ -339,11 +356,10 @@ public class ElasticsearchIndexTest extends ESIntegTestCase {
 
 		// create a Repository wrapping the LuceneSail
 		SailRepository repository = new SailRepository(sail);
-		repository.initialize();
 
 		// now add the statements through the repo
 		// add statements with context
-		try (SailRepositoryConnection connection = repository.getConnection();) {
+		try (SailRepositoryConnection connection = repository.getConnection()) {
 			connection.begin();
 			connection.add(statementContext111, statementContext111.getContext());
 			connection.add(statementContext121, statementContext121.getContext());
@@ -391,11 +407,10 @@ public class ElasticsearchIndexTest extends ESIntegTestCase {
 
 		// create a Repository wrapping the LuceneSail
 		SailRepository repository = new SailRepository(sail);
-		repository.initialize();
 
 		// now add the statements through the repo
 		// add statements with context
-		try (SailRepositoryConnection connection = repository.getConnection();) {
+		try (SailRepositoryConnection connection = repository.getConnection()) {
 			connection.begin();
 			connection.add(statementContext111, statementContext111.getContext());
 			connection.add(statementContext121, statementContext121.getContext());
