@@ -1,16 +1,20 @@
 /*******************************************************************************
  * Copyright (c) 2015 Eclipse RDF4J contributors, Aduna, and others.
+ *
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Distribution License v1.0
  * which accompanies this distribution, and is available at
  * http://www.eclipse.org/org/documents/edl-v10.php.
+ *
+ * SPDX-License-Identifier: BSD-3-Clause
  *******************************************************************************/
 package org.eclipse.rdf4j.query.parser.sparql;
 
 import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertThrows;
 import static org.junit.Assert.assertTrue;
 
-import java.util.Arrays;
+import java.util.List;
 
 import org.eclipse.rdf4j.model.vocabulary.FOAF;
 import org.eclipse.rdf4j.query.MalformedQueryException;
@@ -18,10 +22,11 @@ import org.eclipse.rdf4j.query.QueryLanguage;
 import org.eclipse.rdf4j.query.Update;
 import org.eclipse.rdf4j.repository.Repository;
 import org.eclipse.rdf4j.repository.http.HTTPRepository;
-import org.junit.AfterClass;
-import org.junit.BeforeClass;
-import org.junit.Ignore;
-import org.junit.Test;
+import org.eclipse.rdf4j.testsuite.query.parser.sparql.SPARQLUpdateTest;
+import org.junit.jupiter.api.AfterAll;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.Disabled;
+import org.junit.jupiter.api.Test;
 
 /**
  * @author jeen
@@ -30,11 +35,11 @@ public class HTTPSparqlUpdateTest extends SPARQLUpdateTest {
 
 	private static SPARQLEmbeddedServer server;
 
-	private static String repositoryId = "test-sparql";
+	private static final String repositoryId = "test-sparql";
 
-	@BeforeClass
+	@BeforeAll
 	public static void startServer() throws Exception {
-		server = new SPARQLEmbeddedServer(Arrays.asList(repositoryId));
+		server = new SPARQLEmbeddedServer(List.of(repositoryId));
 		try {
 			server.start();
 		} catch (Exception e) {
@@ -43,7 +48,7 @@ public class HTTPSparqlUpdateTest extends SPARQLUpdateTest {
 		}
 	}
 
-	@AfterClass
+	@AfterAll
 	public static void stopServer() throws Exception {
 		server.stop();
 	}
@@ -53,7 +58,7 @@ public class HTTPSparqlUpdateTest extends SPARQLUpdateTest {
 		return new HTTPRepository(server.getRepositoryUrl(repositoryId));
 	}
 
-	@Ignore
+	@Disabled
 	@Test
 	@Override
 	public void testAutoCommitHandling() {
@@ -94,7 +99,7 @@ public class HTTPSparqlUpdateTest extends SPARQLUpdateTest {
 		}
 	}
 
-	@Ignore
+	@Disabled
 	@Test
 	@Override
 	public void testConsecutiveUpdatesInSameTransaction() {
@@ -104,18 +109,24 @@ public class HTTPSparqlUpdateTest extends SPARQLUpdateTest {
 				"temporarily disabled testConsecutiveUpdatesInSameTransaction() for HTTPRepository. See SES-1652");
 	}
 
-	@Ignore
-	@Test(expected = MalformedQueryException.class)
+	@Disabled
+	@Test
 	@Override
 	public void testInvalidInsertUpdate() {
+		// FIXME: Where is the test?
+		assertThrows(MalformedQueryException.class, () -> {
+		});
 		// disabling test
 		System.err.println("temporarily disabled testInvalidInsertUpdate for HTTPRepository. See Issue #420");
 	}
 
-	@Ignore
-	@Test(expected = MalformedQueryException.class)
+	@Disabled
+	@Test
 	@Override
 	public void testInvalidDeleteUpdate() {
+		// FIXME: Where is the test?
+		assertThrows(MalformedQueryException.class, () -> {
+		});
 		// disabling test
 		System.err.println("temporarily disabled testInvalidDeleteUpdate for HTTPRepository. See Issue #420");
 	}
