@@ -1,15 +1,19 @@
 /*******************************************************************************
  * Copyright (c) 2015 Eclipse RDF4J contributors, Aduna, and others.
+ *
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Distribution License v1.0
  * which accompanies this distribution, and is available at
  * http://www.eclipse.org/org/documents/edl-v10.php.
+ *
+ * SPDX-License-Identifier: BSD-3-Clause
  *******************************************************************************/
 package org.eclipse.rdf4j.rio.ntriples;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertTrue;
-import static org.junit.Assert.fail;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.fail;
 
 import java.io.InputStream;
 import java.io.StringReader;
@@ -31,7 +35,7 @@ import org.eclipse.rdf4j.rio.helpers.BasicParserSettings;
 import org.eclipse.rdf4j.rio.helpers.NTriplesParserSettings;
 import org.eclipse.rdf4j.rio.helpers.ParseErrorCollector;
 import org.eclipse.rdf4j.rio.helpers.StatementCollector;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
 /**
  * Unit tests for N-Triples Parser.
@@ -40,14 +44,13 @@ import org.junit.Test;
  */
 public abstract class AbstractNTriplesParserUnitTest {
 
-	private static String NTRIPLES_TEST_URL = "http://www.w3.org/2000/10/rdf-tests/rdfcore/ntriples/test.nt";
+	private static final String NTRIPLES_TEST_URL = "http://www.w3.org/2000/10/rdf-tests/rdfcore/ntriples/test.nt";
 
-	private static String NTRIPLES_TEST_FILE = "/testcases/ntriples/test.nt";
+	private static final String NTRIPLES_TEST_FILE = "/testcases/ntriples/test.nt";
 
 	@Test
 	public void testNTriplesFile() throws Exception {
 		RDFParser ntriplesParser = createRDFParser();
-		ntriplesParser.setDatatypeHandling(RDFParser.DatatypeHandling.IGNORE);
 		Model model = new LinkedHashModel();
 		ntriplesParser.setRDFHandler(new StatementCollector(model));
 
@@ -68,7 +71,6 @@ public abstract class AbstractNTriplesParserUnitTest {
 		String data = "invalid nt";
 
 		RDFParser ntriplesParser = createRDFParser();
-		ntriplesParser.setDatatypeHandling(RDFParser.DatatypeHandling.IGNORE);
 		Model model = new LinkedHashModel();
 		ntriplesParser.setRDFHandler(new StatementCollector(model));
 
@@ -85,7 +87,7 @@ public abstract class AbstractNTriplesParserUnitTest {
 		String data = "invalid nt";
 
 		RDFParser ntriplesParser = createRDFParser();
-		ntriplesParser.getParserConfig().set(NTriplesParserSettings.FAIL_ON_NTRIPLES_INVALID_LINES, Boolean.TRUE);
+		ntriplesParser.getParserConfig().set(NTriplesParserSettings.FAIL_ON_INVALID_LINES, Boolean.TRUE);
 
 		Model model = new LinkedHashModel();
 		ntriplesParser.setRDFHandler(new StatementCollector(model));
@@ -103,7 +105,7 @@ public abstract class AbstractNTriplesParserUnitTest {
 		String data = "invalid nt";
 
 		RDFParser ntriplesParser = createRDFParser();
-		ntriplesParser.getParserConfig().addNonFatalError(NTriplesParserSettings.FAIL_ON_NTRIPLES_INVALID_LINES);
+		ntriplesParser.getParserConfig().addNonFatalError(NTriplesParserSettings.FAIL_ON_INVALID_LINES);
 
 		Model model = new LinkedHashModel();
 		ntriplesParser.setRDFHandler(new StatementCollector(model));
@@ -121,7 +123,7 @@ public abstract class AbstractNTriplesParserUnitTest {
 		String data = "invalid nt";
 
 		RDFParser ntriplesParser = createRDFParser();
-		ntriplesParser.getParserConfig().set(NTriplesParserSettings.FAIL_ON_NTRIPLES_INVALID_LINES, false);
+		ntriplesParser.getParserConfig().set(NTriplesParserSettings.FAIL_ON_INVALID_LINES, false);
 
 		Model model = new LinkedHashModel();
 		ntriplesParser.setRDFHandler(new StatementCollector(model));
@@ -382,22 +384,18 @@ public abstract class AbstractNTriplesParserUnitTest {
 		assertEquals(0, model.objects().size());
 	}
 
-	@Test(expected = RDFParseException.class)
+	@Test
 	public void testBlankNodeIdentifiersWithDotAsLastCahracter() throws Exception {
 		// The character . may appear anywhere except the first or last character.
 		RDFParser ntriplesParser = new NTriplesParser();
 		Model model = new LinkedHashModel();
 		ntriplesParser.setRDFHandler(new StatementCollector(model));
-		try {
-			ntriplesParser.parse(new StringReader("_:123 <urn:test:predicate> _:456. ."), NTRIPLES_TEST_URL);
-		} catch (RDFParseException e) {
-			assertEquals(0, model.size());
-			assertEquals(0, model.subjects().size());
-			assertEquals(0, model.predicates().size());
-			assertEquals(0, model.objects().size());
-			throw e;
-		}
-		fail("Should have failed to parse invalid N-Triples bnode with '.' at the end of the bnode label");
+		assertThrows(RDFParseException.class,
+				() -> ntriplesParser.parse(new StringReader("_:123 <urn:test:predicate> _:456. ."), NTRIPLES_TEST_URL));
+		assertEquals(0, model.size());
+		assertEquals(0, model.subjects().size());
+		assertEquals(0, model.predicates().size());
+		assertEquals(0, model.objects().size());
 	}
 
 	@Test
@@ -426,18 +424,18 @@ public abstract class AbstractNTriplesParserUnitTest {
 						+ " in charactersList");
 			}
 
-			assertEquals("Should parse '" + character + "'", 1, model.size());
-			assertEquals("Should have subject when triple has character : '" + character + "'", 1,
-					model.subjects().size());
-			assertEquals("Should have predicate when triple has character : '" + character + "'", 1,
-					model.predicates().size());
-			assertEquals("Should have object when triple has character : '" + character + "'", 1,
-					model.objects().size());
+			assertEquals(1, model.size(), "Should parse '" + character + "'");
+			assertEquals(1, model.subjects().size(),
+					"Should have subject when triple has character : '" + character + "'");
+			assertEquals(1, model.predicates().size(),
+					"Should have predicate when triple has character : '" + character + "'");
+			assertEquals(1, model.objects().size(),
+					"Should have object when triple has character : '" + character + "'");
 		}
 
 	}
 
-	@Test(expected = RDFParseException.class)
+	@Test
 	public void testBlankNodeIdentifiersWithOtherCharactersAsFirstCharacter() throws Exception {
 		// The characters -, U+00B7, U+0300 to U+036F and U+203F to U+2040 are permitted anywhere except the first
 		// character.
@@ -454,19 +452,15 @@ public abstract class AbstractNTriplesParserUnitTest {
 			Model model = new LinkedHashModel();
 			ntriplesParser.setRDFHandler(new StatementCollector(model));
 
-			try {
+			assertThrows(RDFParseException.class, () -> {
 				ntriplesParser.parse(
 						new StringReader("<urn:test:subject> <urn:test:predicate> _:" + character + "1 . "),
 						NTRIPLES_TEST_URL);
-			} catch (RDFParseException e) {
-				assertEquals(0, model.size());
-				assertEquals(0, model.subjects().size());
-				assertEquals(0, model.predicates().size());
-				assertEquals(0, model.objects().size());
-				throw e;
-			}
-			fail("Should have failed to parse invalid N-Triples bnode with '" + character
-					+ "' at the begining of the bnode label");
+			});
+			assertEquals(0, model.size());
+			assertEquals(0, model.subjects().size());
+			assertEquals(0, model.predicates().size());
+			assertEquals(0, model.objects().size());
 		}
 	}
 
@@ -495,7 +489,7 @@ public abstract class AbstractNTriplesParserUnitTest {
 				"http://example/");
 		assertEquals(2, model.size());
 		assertEquals(new TreeSet<>(Arrays.asList("o:1", "o:2")), Models.objectStrings(model));
-		assertEquals(Arrays.asList(commentStr), cc.comments);
+		assertEquals(List.of(commentStr), cc.comments);
 	}
 
 	@Test
@@ -512,7 +506,7 @@ public abstract class AbstractNTriplesParserUnitTest {
 		List<String> errors = collector.getErrors();
 
 		assertEquals(1, errors.size());
-		assertTrue("Unknown line number", errors.get(0).contains("(1, 32)"));
+		assertTrue(errors.get(0).contains("(1, 32)"), "Unknown line number");
 	}
 
 	@Test
@@ -530,7 +524,7 @@ public abstract class AbstractNTriplesParserUnitTest {
 		List<String> errors = collector.getErrors();
 
 		assertEquals(1, errors.size());
-		assertTrue("Unknown line number", errors.get(0).contains("(1, 32)"));
+		assertTrue(errors.get(0).contains("(1, 32)"), "Unknown line number");
 	}
 
 	protected abstract RDFParser createRDFParser();
