@@ -1,3 +1,14 @@
+/*******************************************************************************
+ * Copyright (c) 2020 Eclipse RDF4J contributors.
+ *
+ * All rights reserved. This program and the accompanying materials
+ * are made available under the terms of the Eclipse Distribution License v1.0
+ * which accompanies this distribution, and is available at
+ * http://www.eclipse.org/org/documents/edl-v10.php.
+ *
+ * SPDX-License-Identifier: BSD-3-Clause
+ *******************************************************************************/
+
 package org.eclipse.rdf4j.sail.shacl.ast.planNodes;
 
 import java.util.ArrayList;
@@ -11,6 +22,7 @@ import java.util.Set;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
+import org.eclipse.rdf4j.model.Resource;
 import org.eclipse.rdf4j.model.Value;
 import org.eclipse.rdf4j.query.BindingSet;
 import org.eclipse.rdf4j.query.algebra.evaluation.util.ValueComparator;
@@ -20,6 +32,8 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 public class ValidationTuple {
+
+	private static final Resource[] NULL_CONTEXT = { null };
 
 	private static final Logger logger = LoggerFactory.getLogger(ValidationTuple.class);
 	private static final ValueComparator valueComparator = new ValueComparator();
@@ -31,13 +45,15 @@ public class ValidationTuple {
 	private final List<ValidationResult> validationResults;
 	private final Set<ValidationTuple> compressedTuples;
 
+	private final Resource[] contexts;
+
 	public ValidationTuple(BindingSet bindingSet, String[] variables, ConstraintComponent.Scope scope,
-			boolean hasValue) {
-		this(bindingSet, Arrays.asList(variables), scope, hasValue);
+			boolean hasValue, Resource[] contexts) {
+		this(bindingSet, Arrays.asList(variables), scope, hasValue, contexts);
 	}
 
 	public ValidationTuple(BindingSet bindingSet, List<String> variables, ConstraintComponent.Scope scope,
-			boolean hasValue) {
+			boolean hasValue, Resource[] contexts) {
 
 		chain = new Value[variables.size()];
 
@@ -47,67 +63,76 @@ public class ValidationTuple {
 
 		this.scope = scope;
 		this.propertyShapeScopeWithValue = hasValue;
-		this.validationResults = Collections.emptyList();
-		this.compressedTuples = Collections.emptySet();
+		this.validationResults = List.of();
+		this.compressedTuples = Set.of();
+		this.contexts = contexts;
 	}
 
-	public ValidationTuple(List<Value> chain, ConstraintComponent.Scope scope, boolean hasValue) {
+	public ValidationTuple(List<Value> chain, ConstraintComponent.Scope scope, boolean hasValue, Resource[] contexts) {
 		this.chain = chain.toArray(new Value[0]);
 		this.scope = scope;
 		this.propertyShapeScopeWithValue = hasValue;
-		this.validationResults = Collections.emptyList();
-		this.compressedTuples = Collections.emptySet();
-
+		this.validationResults = List.of();
+		this.compressedTuples = Set.of();
+		this.contexts = contexts;
 	}
 
 	// We will assume that the provided chain will not be mutated elsewhere.
-	public ValidationTuple(Value[] chain, ConstraintComponent.Scope scope, boolean hasValue) {
+	public ValidationTuple(Value[] chain, ConstraintComponent.Scope scope, boolean hasValue, Resource[] contexts) {
 		this.chain = chain;
 		this.scope = scope;
 		this.propertyShapeScopeWithValue = hasValue;
-		this.validationResults = Collections.emptyList();
-		this.compressedTuples = Collections.emptySet();
+		this.validationResults = List.of();
+		this.compressedTuples = Set.of();
+		this.contexts = contexts;
 	}
 
-	public ValidationTuple(Value a, Value c, ConstraintComponent.Scope scope, boolean hasValue) {
-		chain = new Value[2];
-		chain[0] = a;
-		chain[1] = c;
-		this.scope = scope;
-		this.propertyShapeScopeWithValue = hasValue;
-		this.validationResults = Collections.emptyList();
-		this.compressedTuples = Collections.emptySet();
-
+	public ValidationTuple(Value a, Value c, ConstraintComponent.Scope scope, boolean hasValue, Resource context) {
+		this(a, c, scope, hasValue, context == null ? NULL_CONTEXT : new Resource[] { context });
 	}
 
-	public ValidationTuple(Value subject, ConstraintComponent.Scope scope, boolean hasValue) {
-		chain = new Value[1];
-		chain[0] = subject;
+	public ValidationTuple(Value a, Value c, ConstraintComponent.Scope scope, boolean hasValue, Resource[] contexts) {
+		chain = new Value[] { a, c };
+
 		this.scope = scope;
 		this.propertyShapeScopeWithValue = hasValue;
-		this.validationResults = Collections.emptyList();
-		this.compressedTuples = Collections.emptySet();
+		this.validationResults = List.of();
+		this.compressedTuples = Set.of();
+		this.contexts = contexts;
+	}
 
+	public ValidationTuple(Value subject, ConstraintComponent.Scope scope, boolean hasValue, Resource context) {
+		this(subject, scope, hasValue, new Resource[] { context });
+	}
+
+	public ValidationTuple(Value subject, ConstraintComponent.Scope scope, boolean hasValue, Resource[] contexts) {
+		chain = new Value[] { subject };
+		this.scope = scope;
+		this.propertyShapeScopeWithValue = hasValue;
+		this.validationResults = List.of();
+		this.compressedTuples = Set.of();
+		this.contexts = contexts;
 	}
 
 	private ValidationTuple(List<ValidationResult> validationResults, Value[] chain,
 			ConstraintComponent.Scope scope, boolean propertyShapeScopeWithValue,
-			Set<ValidationTuple> compressedTuples) {
+			Set<ValidationTuple> compressedTuples, Resource[] contexts) {
 		this.validationResults = Collections.unmodifiableList(validationResults);
 		this.chain = chain;
 		this.scope = scope;
 		this.propertyShapeScopeWithValue = propertyShapeScopeWithValue;
-		this.compressedTuples = Collections.unmodifiableSet(compressedTuples);
+		this.compressedTuples = compressedTuples.isEmpty() ? Set.of() : Collections.unmodifiableSet(compressedTuples);
+		this.contexts = contexts;
 
 	}
 
-	public ValidationTuple(ValidationTuple temp, Set<ValidationTuple> compressedTuples) {
-		this.validationResults = temp.validationResults;
-		this.chain = temp.chain;
-		this.scope = temp.scope;
-		this.propertyShapeScopeWithValue = temp.propertyShapeScopeWithValue;
-		this.compressedTuples = Collections.unmodifiableSet(compressedTuples);
-
+	public ValidationTuple(ValidationTuple tuple, Set<ValidationTuple> compressedTuples) {
+		this.validationResults = tuple.validationResults;
+		this.chain = tuple.chain;
+		this.scope = tuple.scope;
+		this.propertyShapeScopeWithValue = tuple.propertyShapeScopeWithValue;
+		this.compressedTuples = compressedTuples.isEmpty() ? Set.of() : Collections.unmodifiableSet(compressedTuples);
+		this.contexts = tuple.contexts;
 	}
 
 	public boolean sameTargetAs(ValidationTuple other) {
@@ -179,7 +204,8 @@ public class ValidationTuple {
 
 		Set<ValidationTuple> compressedTuples = enrichCompressedTuples(t -> t.addValidationResult(validationResult));
 
-		return new ValidationTuple(validationResults, chain, scope, propertyShapeScopeWithValue, compressedTuples);
+		return new ValidationTuple(validationResults, chain, scope, propertyShapeScopeWithValue, compressedTuples,
+				contexts);
 	}
 
 	public Value getActiveTarget() {
@@ -222,7 +248,7 @@ public class ValidationTuple {
 
 			return Collections
 					.singletonList(new ValidationTuple(this.validationResults, chain, scope,
-							propertyShapeScopeWithValue, Collections.emptySet()));
+							propertyShapeScopeWithValue, Set.of(), contexts));
 
 		} else {
 			return this.compressedTuples.stream()
@@ -237,9 +263,9 @@ public class ValidationTuple {
 							chain = chain.subList(0, chain.size() - 1);
 						}
 
-						return new ValidationTuple(t.validationResults, chain.toArray(new Value[chain.size()]), scope,
+						return new ValidationTuple(t.validationResults, chain.toArray(new Value[0]), scope,
 								propertyShapeScopeWithValue,
-								Collections.emptySet());
+								Set.of(), t.contexts);
 
 					})
 					.collect(Collectors.toList());
@@ -259,13 +285,13 @@ public class ValidationTuple {
 
 			return compressedTuples.stream()
 					.map(t -> new ValidationTuple(t.validationResults, t.chain, scope, propertyShapeScopeWithValue,
-							Collections.emptySet()))
+							Set.of(), t.contexts))
 					.collect(Collectors.toList());
 
 		} else {
 			return Collections.singletonList(
 					new ValidationTuple(this.validationResults, chain, scope, propertyShapeScopeWithValue,
-							Collections.emptySet()));
+							Set.of(), contexts));
 		}
 
 	}
@@ -282,7 +308,6 @@ public class ValidationTuple {
 	/**
 	 * This is only the target part. For property shape scope it will not include the value.
 	 *
-	 * @return
 	 * @param includePropertyShapeValues
 	 */
 	public List<Value> getTargetChain(boolean includePropertyShapeValues) {
@@ -299,7 +324,8 @@ public class ValidationTuple {
 			return this;
 		}
 
-		assert scope == ConstraintComponent.Scope.propertyShape : "Can't set value on NodeShape scoped ValidationTuple because it will also change the target!";
+		assert scope == ConstraintComponent.Scope.propertyShape
+				: "Can't set value on NodeShape scoped ValidationTuple because it will also change the target!";
 
 		Value[] chain;
 
@@ -314,7 +340,7 @@ public class ValidationTuple {
 
 		Set<ValidationTuple> compressedTuples = enrichCompressedTuples(t -> t.setValue(value));
 
-		return new ValidationTuple(this.validationResults, chain, scope, true, compressedTuples);
+		return new ValidationTuple(this.validationResults, chain, scope, true, compressedTuples, contexts);
 	}
 
 	private Set<ValidationTuple> enrichCompressedTuples(
@@ -344,7 +370,7 @@ public class ValidationTuple {
 
 				Set<ValidationTuple> compressedTuples = enrichCompressedTuples(ValidationTuple::trimToTarget);
 
-				return new ValidationTuple(this.validationResults, chain, scope, false, compressedTuples);
+				return new ValidationTuple(validationResults, chain, scope, false, compressedTuples, contexts);
 			}
 		}
 		return this;
@@ -374,14 +400,14 @@ public class ValidationTuple {
 
 			return Collections.singletonList(
 					new ValidationTuple(this.validationResults, chain, scope, propertyShapeScopeWithValue,
-							Collections.emptySet()));
+							Set.of(), contexts));
 		} else {
 
 			return compressedTuples.stream().flatMap(t1 -> {
 				return t1.pop()
 						.stream()
 						.map(t -> new ValidationTuple(t.validationResults, t.chain, t.scope,
-								t.propertyShapeScopeWithValue, t.compressedTuples));
+								t.propertyShapeScopeWithValue, t.compressedTuples, t.contexts));
 			}).collect(Collectors.toList());
 
 		}
@@ -424,11 +450,37 @@ public class ValidationTuple {
 			compressedTuples.addAll(right.getCompressedTuples());
 		}
 
+		Resource[] contexts;
+
+		if (this.contexts != right.contexts) {
+			assert this.contexts != null;
+			assert right.contexts != null;
+			if (this.contexts.length == 1 && right.contexts.length == 1
+					&& this.contexts[0] == right.contexts[0]) {
+				contexts = this.contexts;
+			} else if (this.contexts.length > 0 && right.contexts.length > 0) {
+				contexts = Arrays.copyOf(this.contexts, this.contexts.length + right.contexts.length);
+				System.arraycopy(right.contexts, 0, contexts, this.contexts.length, right.contexts.length);
+			} else if (right.contexts.length > 0) {
+				// this.contexts must be an empty array
+				contexts = right.contexts;
+			} else {
+				contexts = this.contexts;
+			}
+		} else {
+			contexts = this.contexts;
+		}
+
 		ValidationTuple validationTuple = new ValidationTuple(validationResults, chain, scope,
-				propertyShapeScopeWithValue, compressedTuples);
+				propertyShapeScopeWithValue, compressedTuples, contexts);
 		if (scope == ConstraintComponent.Scope.propertyShape) {
 			validationTuple = validationTuple.setValue(right.getValue());
 		}
 		return validationTuple;
 	}
+
+	public Resource[] getContexts() {
+		return contexts;
+	}
+
 }
